--- a/Lab13_SpringHibernate/src/main/webapp/WEB-INF/web.xml
+++ b/Lab13_SpringHibernate/src/main/webapp/WEB-INF/web.xml
@@ -12,15 +12,26 @@
         <servlet-name>CountryServlet</servlet-name>
         <url-pattern>/countryServlet</url-pattern>
     </servlet-mapping>   -->
+    <servlet>
+        <servlet-name>test</servlet-name>
+        <servlet-class>
+            org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>test</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    <welcome-file-list>
+    <!--<welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+    </welcome-file-list>-->
 
     <resource-ref>
         <res-ref-name>jdbc/postgres</res-ref-name>
