--- a/Lab13_SpringHibernate/src/main/webapp/WEB-INF/web.xml
+++ b/Lab13_SpringHibernate/src/main/webapp/WEB-INF/web.xml
@@ -17,9 +17,10 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <!--<context-param>
+    <!-- applicationContext.xml will be found by default, without configuring ContextLoaderListener (that's why it's commented)
+    <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml.bak</param-value>
+        <param-value>/WEB-INF/applicationContext.xml</param-value>
     </context-param>
 
     <listener>
